--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
             </div>
           </a>
 
-          <a href="https://pump.fun/7CQx7kEG9ezuwh4YHuuR86CbCBS46ExPMZEa3RVdpump" target="_blank" class="div-block-48 w-inline-block">
+          <a href="https://pump.fun/0x00000000000000" target="_blank" class="div-block-48 w-inline-block">
             <div class="div-block-52"><img
                 src="https://assets-global.website-files.com/623c8b34fd38198807b54933/64e520e52ffbdfa3b7bf3b50_paw_icon.svg"
                 loading="lazy" alt="Star Illustration" height="47" class="image-61 social" /></div>
@@ -166,7 +166,7 @@
           </div>
 
           <div class="nav-link-wrapper last-link">
-            <div class="background-container"><a href="https://pump.fun/7CQx7kEG9ezuwh4YHuuR86CbCBS46ExPMZEa3RVdpump" class="link-2 audiobutton foundation">Buy $BTSHIB</a></div>
+            <div class="background-container"><a href="https://pump.fun/0x00000000000000" class="link-2 audiobutton foundation">Buy $BTSHIB</a></div>
           </div>
         </nav>
       </header>
@@ -230,7 +230,7 @@
   <br><br>
               $BTSHIB : The $BTSHIB token lets fans connect with Bitcoin Vs Shiba Inu's art digitally. It offers exclusive access to events, art releases, and a vibrant community supporting his creative journey.
             <br><br>
-            <div class="audio-button-block button dark-pink do-good"><a href="https://pump.fun/7CQx7kEG9ezuwh4YHuuR86CbCBS46ExPMZEa3RVdpump"
+            <div class="audio-button-block button dark-pink do-good"><a href="https://pump.fun/0x00000000000000"
               target="_blank" class="audiobutton button pinkbutton w-button">Buy $BTSHIB</a></div>
             </div>
           </div>
@@ -403,7 +403,7 @@
               src="/aaaaaaaaaa-removebg-preview.png"
               loading="lazy" alt="Hooray for Howllywood" class="image-92" />
             <div class="body-copy hooray-text">$BTSHIB bridges Bitcoin Vs Shiba Inu’s imaginative art with the world of blockchain. ensuring scarcity and value over time.</div>
-            <div class="body-copy hooray-text">CA : 7CQx7kEG9ezuwh4YHuuR86CbCBS46ExPMZEa3RVdpump</div>
+            <div class="body-copy hooray-text">CA : 0x00000000000000</div>
           </div>
         </div>
       </div>
@@ -454,7 +454,7 @@
               src="/text.png"
               loading="lazy" alt=" Bitcoin Vs Shiba Inu  Foundation Logo" class="image-31" />
             <div class="body-copy foundation do-good">$BTSHIB bridges Bitcoin Vs Shiba Inu’s imaginative art with the world of blockchain. Join us at the closing party of his solo show, “That’s Different,” and become part of a community celebrating art and innovation.</div>
-            <div class="audio-button-block button dark-pink do-good"><a href="https://pump.fun/7CQx7kEG9ezuwh4YHuuR86CbCBS46ExPMZEa3RVdpump"
+            <div class="audio-button-block button dark-pink do-good"><a href="https://pump.fun/0x00000000000000"
                 target="_blank" class="audiobutton button pinkbutton w-button">Chart $BTSHIB</a></div>
           </div>
         </div>
